# cpp-equiv

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  graph.txt  kruskal.cpp  makefile
include/: equiv.hpp  equiv.tpp  equiv_relation  equiv_relation_hash  equiv_relation_store  er_hash.hpp  er_hash.tpp  er_store.hpp  er_store.tpp
include/tpp/: equiv_relation.tpp  equiv_relation_store.tpp
test/: CMakeLists.txt  makefile  test.cpp  test_er.cpp  test_hash.cpp  test_store.cpp
